2011-06-01 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #13446: Kickstarter allows hyphen in extension key (credits Matze)

2011-04-10 Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #18088: Generated extensions are not compatible with workspaces

2011-01-27 Peter Foerger  <pfoerger@gmail.com>

	* Set trunk to version 0.6.0-dev

2011-01-27 Peter Foerger  <pfoerger@gmail.com>

	* Release of EXT:kickstarter v0.5.0

2011-01-27 Peter Foerger  <pfoerger@gmail.com>

	* Replaced mixed quotes with single quotes in function call.

2011-01-26 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #16509: Convert all files to UTF-8

2011-01-26 Peter Foerger  <pfoerger@gmail.com>

	* Converted encoding to utf-8 and corrected Kaspers name

2011-01-26 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #17332: Newline character after php closing tag in class.tx_kickstarter_reservedwords.php

2011-01-26 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #16962: t3ver_stage should be int(11) in 4.5 (credits Tolleiv Nietsch)

2010-12-22 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #13208: Add pages to subtypes_excludelist (credits Georg Ringer)

2010-12-22 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #11645: Message text contains LINE BREAK (credits Stefano Kowalke)

2010-12-22 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #11414 : After deletion of files kickstarter recreates them always (credits Daniel Hahler)

2010-12-22 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #10917: ShowUid is not checked for numeric content

2010-12-22 Steffen Kamper <info@sk-typo3.de>

	* Fixed wrong module template path

2010-07-29 Ingo Renner	<ingo3@typo3.org>

	* Added "type" as reserved word

2010-01-03 Ingo Renner	<ingo3@typo3.org>

	* Fixed a whitespace issue

2009-12-25 Ingo Renner	<ingo3@typo3.org>

	* Fixed bug #12891: kickstarter crashes with 5.3 (credits Steffen Kamper)
	* Added feature #12775: Use label tags in the language section (credits Georg Ringer)