@@ -799,8 +799,8 @@ class tx_kickstarter_sectionbase {
 							);
 						}
 
-						$headerSection = $this->doc->getHeader(\'pages\',$this->pageinfo,$this->pageinfo[\'_thePath\']).\'<br />\'
-								.$LANG->sL(\'LLL:EXT:lang/locallang_core.xml:labels.path\').\': \'.t3lib_div::fixed_lgd_pre($this->pageinfo[\'_thePath\'], 50);
+						$headerSection = $this->doc->getHeader(\'pages\', $this->pageinfo, $this->pageinfo[\'_thePath\']) . \'<br />\'
+								. $LANG->sL(\'LLL:EXT:lang/locallang_core.xml:labels.path\') . \': \' . t3lib_div::fixed_lgd_cs($this->pageinfo[\'_thePath\'], -50);
 
 						$this->content.=$this->doc->startPage($LANG->getLL(\'title\'));
 						$this->content.=$this->doc->header($LANG->getLL(\'title\'));
